# fabien-et-la-trahison-de-olf

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-MIT  README.md  fabien-et-la-trahison-de-olf.d.ts  fabien-et-la-trahison-de-olf.js  fabien-et-la-trahison-de-olf_bg.wasm.d.ts  index.html
assets/shaders/: dialog_box_character_appear.wgsl
assets/textures/: .fabien_info_run.png-autosave.kra
assets/textures/temple/: .pillars_and_curtains.png-autosave.kra  empty_temple.png~
assets/textures/temple/old_old_old_temple/: .empty_temple.png-autosave.kra  empty_temple.png.old  pillars_and_curtains.png~
data/: dialogs.ron  fabien_dialog.yml  hugo_dialog.yml  logging_config.yaml  olf_dialog.yml  player_animations.ron  self_player_dialog.yml  supreme_god_dialog.yml
docs/Turn-Based Strategy/: CHANGELOG.md
src/: animations.rs  characters.rs  collisions.rs  constants.rs  controls.rs  debug.rs  dialogs.rs  interactions.rs  main.rs  material.rs  menu.rs  player.rs
src/animations/: fade.rs  functions.rs  mod.rs  slide.rs  sprite_sheet_animation.rs
src/characters/: mod.rs  movement.rs  player.rs
src/characters/npcs/: aggression.rs  idle.rs  mod.rs  movement.rs
src/combat/: alteration_list.rs  alterations.rs  item_list.rs  mod.rs  phases.rs  skill_list.rs  skills.rs  stats.rs  stuff.rs  tactical_position.rs  teamwork.rs  weapons_list.rs
src/constants/: character.rs  combat.rs  mod.rs  title_screen.rs  ui.rs
src/constants/locations/: hall.rs  mod.rs  secret_room.rs
src/constants/locations/hall/: landmarks.rs  mod.rs
src/constants/locations/main_room/: landmarks.rs  mod.rs
src/constants/locations/secret_room/: landmarks.rs  mod.rs
src/dialogs/: dialog_box.rs  language.rs  mod.rs
src/game/: mod.rs  player.rs
src/locations/: landmarks.rs  mod.rs  temple.rs
src/locations/temple/: curtains.rs  first_corridor.rs  hall.rs  main_room.rs  mod.rs  second_corridor.rs  secret_room.rs
src/ui/: dialog_box.rs  dialog_panel.rs  dialog_player.rs  dialog_scrolls.rs  dialog_systems.rs  mod.rs
src/ui/combat/: character_sheet.rs  combat_panel.rs  combat_system.rs  fighting_scene.rs  initiative_bar.rs  log_cave.rs  mod.rs  player_interaction.rs
src/ui/dialog/: dialog_box.rs  dialog_panel.rs  dialog_player.rs  dialog_scrolls.rs  dialog_systems.rs  mod.rs
