[package]
name = "fabien-et-la-trahison-de-olf"
version = "0.3.8"
authors = ["Morgan Van Amerongen <vanamerongen.morgan@gmail.com>", "Olf EPAIN <wabtey@disroot.org>", "Grassouille la Fripouille", "Sombre Roi René"]
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = "0.10"
bevy_rapier2d = { version = "0.21", features = ["simd-stable", "debug-render-2d"] }
bevy_tweening = "0.7"

# ----- Utilities -----
serde = "1.0"
ron = "0.7"
strum = "0.24"
strum_macros = "0.24"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
